--- a/.github/workflows/build-release-latest.yml
+++ b/.github/workflows/build-release-latest.yml
@@ -37,112 +37,6 @@ jobs:
       run: |
         python -m unittest tests/test_*.py
 
-  debian:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-      - run: /usr/bin/docker build -t build-nagstamon -f build/docker/Dockerfile-${{ github.job }} .
-      - run: /usr/bin/docker run -v ${{ github.workspace }}:/nagstamon build-nagstamon
-      - uses: actions/upload-artifact@v3
-        with:
-          path: build/*.deb
-          retention-days: 1
-          if-no-files-found: error
-
-  fedora-34:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-      - run: /usr/bin/docker build -t build-nagstamon -f build/docker/Dockerfile-${{ github.job }} .
-      - run: /usr/bin/docker run -v ${{ github.workspace }}:/nagstamon build-nagstamon
-      - uses: actions/upload-artifact@v3
-        with:
-          path: build/*.rpm
-          retention-days: 1
-          if-no-files-found: error
-
-  fedora-35:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-      - run: /usr/bin/docker build -t build-nagstamon -f build/docker/Dockerfile-${{ github.job }} .
-      - run: /usr/bin/docker run -v ${{ github.workspace }}:/nagstamon build-nagstamon
-      - uses: actions/upload-artifact@v3
-        with:
-          path: build/*.rpm
-          retention-days: 1
-          if-no-files-found: error
-
-  fedora-36:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-      - run: /usr/bin/docker build -t build-nagstamon -f build/docker/Dockerfile-${{ github.job }} .
-      - run: /usr/bin/docker run -v ${{ github.workspace }}:/nagstamon build-nagstamon
-      - uses: actions/upload-artifact@v3
-        with:
-          path: build/*.rpm
-          retention-days: 1
-          if-no-files-found: error
-
-  fedora-37:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-      - run: /usr/bin/docker build -t build-nagstamon -f build/docker/Dockerfile-${{ github.job }} .
-      - run: /usr/bin/docker run -v ${{ github.workspace }}:/nagstamon build-nagstamon
-      - uses: actions/upload-artifact@v3
-        with:
-          path: build/*.rpm
-          retention-days: 1
-          if-no-files-found: error
-
-  macos:
-    runs-on: macos-10.15
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-      - run: pip3 install --no-warn-script-location -r build/requirements/macos.txt
-      - run: cd ${{ github.workspace }}/build; python3 build.py
-        env:
-          PYTHONPATH: ${{ github.workspace }}
-      - uses: actions/upload-artifact@v3
-        with:
-          path: build/*.dmg
-          retention-days: 1
-          if-no-files-found: error
-
-  windows-32:
-    # better depend on stable build image
-    runs-on: windows-2019
-    needs: test
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        with:
-          python-version: ${{ env.python_win_version }}
-          architecture: x86
-      #  no PyQt6 for win32 available on pypi.org
-      - run: ((Get-Content -path build/requirements/windows.txt -Raw) -replace 'pyqt6.*','pyqt5') | Set-Content -Path build/requirements/windows.txt
-      - run: python -m pip install --no-warn-script-location -r build/requirements/windows.txt
-      # pretty hacky but no other idea to avoid gssapi being installed which breaks requests-kerberos
-      - run: python -m pip uninstall -y gssapi requests-gssapi
-      - run: cd ${{ github.workspace }}/build; python build.py
-        env:
-          PYTHONPATH: ${{ github.workspace }}
-      - uses: actions/upload-artifact@v3
-        with:
-          path: |
-            build/dist/*.zip
-            build/dist/*.exe
-          retention-days: 1
-          if-no-files-found: error
-
   windows-64:
     # better depend on stable build image
     runs-on: windows-2019
@@ -167,32 +61,9 @@ jobs:
           retention-days: 1
           if-no-files-found: error
 
-  repo-fedora:
-    runs-on: ubuntu-latest
-    # if not all are ready there might be trouble when downloading artifacts
-    needs: [debian, fedora-34, fedora-35, fedora-36, fedora-37, macos, windows-32, windows-64]
-    steps:
-      # get binaries created by other jobs
-      - uses: actions/download-artifact@v3
-      # organize SSH deploy key for nagstamon-repo
-      - run: mkdir ~/.ssh
-      - run: echo "${{ secrets.NAGSTAMON_REPO_KEY_WEB }}" >  ~/.ssh/id_ed25519
-      - run: chmod -R go-rwx ~/.ssh
-      # get and prepare nagstamon-jekyll
-      - run: git clone git@github.com:HenriWahl/nagstamon-jekyll.git
-      - run: rm -rf ${{ env.repo_dir }}/fedora/latest
-      - run: mkdir -p ${{ env.repo_dir }}/fedora/latest
-      # copy *.rpm files into nagstamon-jekyll
-      - run: cp -r artifact/*.rpm ${{ env.repo_dir }}/fedora/latest
-      # create rpm repo via Fedora container
-      - run: docker run --rm -v $PWD/${{ env.repo_dir }}/fedora/latest:/repo fedora /bin/sh -c "dnf -y install createrepo_c && createrepo /repo"
-      # commit and push new binaries to nagstamon-repo
-      - run: git config --global user.email "repo@nagstamon.de" && git config --global user.name "Nagstamon Repository"
-      - run: cd ${{ env.repo_dir }} && git add . && git commit -am "new latest repo" && git push
-
   github-release:
     runs-on: ubuntu-latest
-    needs: [debian, fedora-34, fedora-35, fedora-36, fedora-37, macos, windows-32, windows-64]
+    needs: [windows-64]
     steps:
       - uses: actions/download-artifact@v3
       - run: cd artifact && md5sum *agstamon* > md5sums.txt
