--- a/.github/workflows/build-release-latest.yml
+++ b/.github/workflows/build-release-latest.yml
@@ -37,6 +37,32 @@ jobs:
       run: |
         python -m unittest tests/test_*.py
 
+  fedora-35:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v3
+      - run: /usr/bin/docker build -t build-nagstamon -f build/docker/Dockerfile-${{ github.job }} .
+      - run: /usr/bin/docker run -v ${{ github.workspace }}:/nagstamon build-nagstamon
+      - uses: actions/upload-artifact@v3
+        with:
+          path: build/*.rpm
+          retention-days: 1
+          if-no-files-found: error
+
+  fedora-36:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v3
+      - run: /usr/bin/docker build -t build-nagstamon -f build/docker/Dockerfile-${{ github.job }} .
+      - run: /usr/bin/docker run -v ${{ github.workspace }}:/nagstamon build-nagstamon
+      - uses: actions/upload-artifact@v3
+        with:
+          path: build/*.rpm
+          retention-days: 1
+          if-no-files-found: error
+
   macos:
     runs-on: macos-10.15
     needs: test
@@ -78,7 +104,7 @@ jobs:
 
   github-release:
     runs-on: ubuntu-latest
-    needs: [macos, windows-64]
+    needs: [fedora-35, fedora-36, macos, windows-64]
     steps:
       - uses: actions/download-artifact@v3
       - run: cd artifact && md5sum *agstamon* > md5sums.txt
